# King-Kais

./: CMakeLists.txt  CMakeLists.txt.user.b3a2f53  README.md  submission.md
goku2/: Seraphim_Goku.mtl
goku3/: Goku.mtl
resources/LUT/: Ancient_Orange.cube
resources/shaders/: default.frag  deferred.frag  deferred.vert  depth.frag  gbuffer.frag  gbuffer.vert  geo.frag  particle.frag  particle.vert  skybox.frag  skybox.vert  texture.frag  texture.vert
scenefiles/: default.json  final_project.json  grass.json  kingkaisplanet.json  world_with_player.json
src/: camera.cpp  camera.h  mainwindow.cpp  mainwindow.h  realtime.cpp  realtime.h  rigidbody.cpp  rigidbody.h  tree.cpp  tree.h
src/trimesh/: Cone.cpp  Cone.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Sphere.cpp  Sphere.h
src/utils/: scenedata.h  scenefilereader.cpp  sceneparser.cpp  sceneparser.h
student_outputs/realtime/required/: README.md
